--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# non medias in points
+points/**/*.jpg
+points/**/*.png
+points/**/*.gif
+points/**/*.psd
+points/**/*.tiff
+points/**/*.pdf
+points/**/*.mp4
+points/**/*.mov
+
 # Logs
 logs
 *.log
@@ -26,6 +36,7 @@ build/Release
 
 # Dependency directory
 node_modules
+bower_components
 
 # Optional npm cache directory
 .npm
@@ -33,4 +44,47 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
-points/2-luciemathieu/background/iguane.jpg
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
