adding filter and table

--- a/archive.yml
+++ b/archive.yml
@@ -11,7 +11,7 @@
     - typographie
 3:
   titre: Fullscreen background image
-  description: une image d'arriere plan en plein écran
+  description: Une image d'arriere plan en plein écran
   code: points/claraclara/2-background
   author: claraclara
   category: html/css
